# AutoEdit

./: .gitignore  CODE_OF_CONDUCT.md  GETTING_STARTED.md  README.md  pyproject.toml
.streamlit/: config.toml
scripts/: example_storage_usage.py  view_results.py
src/autoedit/: __init__.py  app.py
src/autoedit/services/: caption_service.py  edit_service.py  image_processor.py  llm_service.py  prompts.py  storage_service.py  system_stats.py
src/autoedit/ui/: __init__.py  layout.py
tests/: test_image_processor.py  test_layout.py  test_storage_service.py
